see #34 title wrap problem fixed

--- a/app/assets/stylesheets/base.css.sass
+++ b/app/assets/stylesheets/base.css.sass
@@ -43,11 +43,16 @@ section.container
     z-index: 5
     +border-radius(0)
     h1
-      padding-left: 15px
+      position: fixed
+      left: 65px
+      white-space: nowrap
       font-size: 25px
     p.pull-left,
     div.pull-right
       margin-top: 5px
+    .pull-right
+      position: fixed
+      right: 20px
 
   aside
     position: fixed
